# python_project

./: .env.example  .gitignore  .pylintrc  Dockerfile  README.md  catalog.db  docker-compose.yml  pyproject.toml
app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
app/core/: config.py  task_queue.py
app/infrastructure/: in_memory_queue.py  redis_queue.py
app/recommender/: __main__.py  engine.py  schemas.py  service.py  types.py  worker.py
app/routers/: analytics.py  auth.py  authors.py  books.py  deps.py  recommendations.py  reviews.py
docs/: ARCHITECTURE.md
scripts/: demo_and_test.py
tests/: conftest.py  test_api.py  test_auth.py
tests/integration/: test_recomendation_service.py  test_recommendation_flow.py
tests/unit/: test_models.py  test_task_queue.py
tests/unit/recommender/: test_engine.py
