[project]
name = "book-catalog"
version = "0.1.0"
description = "Учебный проект по Python"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic[email]>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "python-multipart>=0.0.6",
    "email-validator>=2.0.0",
    "redis>=4.5.0",
    "pydantic-settings>=2.0.0",
    "numpy>=1.24.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pylint>=3.0.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=70",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py314"