[project]
name = "book-catalog"
version = "0.1.0"
description = "Учебный проект по Python"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic[email]>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "python-multipart>=0.0.6",
    "email-validator>=2.0.0",
    "redis>=4.5.0",
    "pydantic-settings>=2.0.0",
    "numpy>=1.24.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pylint>=3.0.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=70",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py314"

# Какие файлы проверять
include = ["pyproject.toml", "app/**/*.py", "tests/**/*.py", "scripts/**/*.py"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc",
]

[tool.ruff.lint]
# Включённые правила:
# E, W — pycodestyle (ошибки и предупреждения)
# F — pyflakes (логические ошибки)
# I — isort (сортировка импортов)
# N — pep8-naming (именование)
# UP — pyupgrade (современный синтаксис)
# B — flake8-bugbear (частые баги)
select = ["E", "W", "F", "I", "N", "UP", "B"]

# Игнорируемые правила (гибкая настройка):
ignore = [
    "E501",      # длина строки — контролируем через ruff.format
    "N812",      # lowercase import — иногда нужно для совместимости
    "B008",
]

# Автоматически исправлять ошибки при запуске
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
# Настройки сортировки импортов
combine-as-imports = true
known-first-party = ["app"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Форматирование (аналог black)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"